Reseting branch to fix misalignment

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -365,18 +365,3 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
-
-.container {
-  display: flex;
-  align-items: center;
-  justify-content: center
-}
-
-img {
-  max-width: 100%;
-  max-height:100%;
-}
-
-.text {
-  font-size: 20px;
-}
